# goldcastle-backend

backend-goldcastle/: Dockerfile  package.json  requirements.txt  starting.sh
backend-goldcastle/app/: ServerRequests.py
backend-goldcastle/databases/: db_backup_2024-03-08_10-11-17.sql  dump_file.sql
backend-goldcastle/scripts/: 0_databaseaddingfromMetadata.mjs  10_electionChecker.py  11_check_signature.mjs  1_checkOverlordAndPower.py  2_checkminting.mjs  3_checkFealtyContractsState.mjs  40_coordinatesInitiator.py  41_warinitiator.py  4_checkGoldContract.mjs  5_databaseAddingFromContractState.mjs  7_databasecopying.py  888_dumping_database.py  8_checkMarketplace.mjs  999_deleteDatabaseContentsandSequences.py  copydatabase.sh  package-lock.json  package.json
backend-goldcastle/scripts/discord/: audio.py  check_gold_balance.mjs  deleteaudio.py  galactic_cat_response.py  galacticcat.py  johnny.py  oldrosy.py  response.py  roles_adder.py  rosy.py  rosy_response.py  small_dependency.py  whitelists.py
backend-goldcastle/scripts/discord/alphcat/guild_configs/: guilds_alphcat.json  template.json
backend-goldcastle/scripts/discord/jsondata/: collections.json  tokenlist.json
backend-goldcastle/scripts/discord/nodescripts/: check_token_balances.mjs  collection_name.mjs
backend-goldcastle/scripts/discord/rosy/guild_configs/: guild_1226789689323819008.json  guilds_rosy.json
backend-goldcastle/scripts/war/atwar/: AtWar  CMakeCache.txt  CMakeLists.txt  Findlibpqxx.cmake  Makefile  cmake_install.cmake
backend-goldcastle/scripts/war/atwar/src/: main.cpp
